# ThaiStr

./: .gitignore  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: feature_request.md
core/: CMakeLists.txt  character-types.h  compiler-info.h  tis620str.h
scripts/: CMakeLists.txt  print_tis620_thai.c
testing/: CMakeLists.txt  pattern_tester.h  unit_test.c  unit_test.h
